feat: create header and dropdown list

--- a/index.html
+++ b/index.html
@@ -5,13 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submission - Belajar Dasar Pemrograman Web</title>
+    <!-- Styles -->
     <link rel="stylesheet" href="./styles/style.css">
+    <!-- Google Icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <!-- Header -->
     <header>
-
+        <h1>Lumi Novry M</h1>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Skills</a></li>
+            <li>
+                <div class="dropdown">
+                    <button id="dropdownbtn" class="dropbtn">Projects<span class="material-symbols-outlined">
+                            arrow_drop_down
+                        </span></button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">Front-End Projects</a>
+                        <a href="#">Back-End Projects</a>
+                        <a href="#">Full Stack Projects</a>
+                    </div>
+                </div>
+            </li>
+            <li><a href="#">Experience</a></li>
+        </ul>
     </header>
     <!-- Main -->
     <main>
