feat: change dropdown style

--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Skills</a></li>
             <li>
-                <div class="dropdown">
-                    <button id="dropdownbtn" class="dropbtn">Projects<span class="material-symbols-outlined">
+                <div class="dropdown" id="dropdownbtn">
+                    <div class="dropbtn">
+                        Projects<span class="material-symbols-outlined">
                             arrow_drop_down
-                        </span></button>
+                        </span>
+                    </div>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#">Front-End Projects</a>
                         <a href="#">Back-End Projects</a>
