restructured html structure

--- a/index.html
+++ b/index.html
@@ -15,32 +15,41 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Lumi Novry M</h1>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Skills</a></li>
-            <li>
-                <div class="dropdown" id="dropdownbtn">
-                    <div class="dropbtn">
-                        Projects<span class="material-symbols-outlined">
-                            arrow_drop_down
-                        </span>
+        <nav>
+            <h1>Lumi Novry M</h1>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Skills</a></li>
+                <li>
+                    <div class="dropdown" id="dropdownbtn">
+                        <div class="dropbtn">
+                            Projects<span class="material-symbols-outlined">
+                                arrow_drop_down
+                            </span>
+                        </div>
+                        <div id="myDropdown" class="dropdown-content">
+                            <a href="#">Front-End Projects</a>
+                            <a href="#">Back-End Projects</a>
+                            <a href="#">Full Stack Projects</a>
+                        </div>
                     </div>
-                    <div id="myDropdown" class="dropdown-content">
-                        <a href="#">Front-End Projects</a>
-                        <a href="#">Back-End Projects</a>
-                        <a href="#">Full Stack Projects</a>
-                    </div>
-                </div>
-            </li>
-            <li><a href="#">Experience</a></li>
-        </ul>
+                </li>
+                <li><a href="#">Experience</a></li>
+            </ul>
+        </nav>
     </header>
     <!-- Main -->
     <main>
+        <div id="content">
+            <article>
 
+            </article>
+            <article>
 
-        <!--  -->
+            </article>
+        </div>
+
+        <!-- Aside -->
         <aside>
 
         </aside>
