wip: create jumbotron & aside

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <li>
                     <div class="dropdown" id="dropdownbtn">
                         <div class="dropbtn">
-                            Projects<span class="material-symbols-outlined">
+                            Projects
+                            <span class="material-symbols-outlined">
                                 arrow_drop_down
                             </span>
                         </div>
@@ -41,17 +42,18 @@
     <!-- Main -->
     <main>
         <div id="content">
-            <article>
-
+            <article class="jumbotron">
+                <p>Lumi</p>
+                <h1>Full Stack Engineer</h1>
+                <p>Hi there! good to see you here. I'm a student who loves to build things.</p>
             </article>
             <article>
-
             </article>
         </div>
 
         <!-- Aside -->
         <aside>
-
+            <h1>Lumi Novry M</h1>
         </aside>
     </main>
     <!-- Footer -->
