change entire theme to black-and-white

--- a/index.html
+++ b/index.html
@@ -16,52 +16,69 @@
     <!-- Header -->
     <header>
         <nav>
-            <h1>Lumi Novry M</h1>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Skills</a></li>
-                <li>
-                    <div class="dropdown" id="dropdownbtn">
-                        <div class="dropbtn">
-                            Projects
-                            <span class="material-symbols-outlined">
-                                arrow_drop_down
-                            </span>
+            <div class="small-nav">
+                <ul class="small-link">
+                    <li><a href="#">Authors</a></li>
+                    |
+                    <li><a href="#">Contact Us</a></li>
+                    |
+                    <li><a href="#">Purchase Item</a></li>
+                </ul>
+                <ul class="icon">
+                    <li><ion-icon name="logo-youtube"></ion-icon></li>
+                    <li><ion-icon name="logo-linkedin"></ion-icon></li>
+                    <li><ion-icon name="logo-instagram"></ion-icon></li>
+                    <li><ion-icon name="logo-facebook"></ion-icon></li>
+                </ul>
+            </div>
+            <div class="first-header">
+                <h1>Bloopers</h1>
+                <ul>
+                    <li><a href="#">Purchase Item</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li>
+                        <div class="dropdown" id="dropdownbtn">
+                            <div class="dropbtn">
+                                About Author
+                                <span class="material-symbols-outlined">
+                                    arrow_drop_down
+                                </span>
+                            </div>
+                            <div id="myDropdown" class="dropdown-content">
+                                <a href="#">Instagram</a>
+                                <a href="#">Linkedin</a>
+                            </div>
                         </div>
-                        <div id="myDropdown" class="dropdown-content">
-                            <a href="#">Front-End Projects</a>
-                            <a href="#">Back-End Projects</a>
-                            <a href="#">Full Stack Projects</a>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="#">Experience</a></li>
-            </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="second-header">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">POST STYLES</a></li>
+                    <li><a href="#">CATEGORIES</a></li>
+                    <li><a href="#">PAGES</a></li>
+                    <li><a href="#">MEGA MENU</a></li>
+                    <li><a href="#">FORUMS</a></li>
+                    <li><a href="#">SHOP</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <!-- Main -->
     <main>
-        <div id="content">
-            <article class="jumbotron">
-                <p>Lumi</p>
-                <h1>Full Stack Engineer</h1>
-                <p>Hi there! good to see you here. I'm a student who loves to build things.</p>
-            </article>
-            <article>
-            </article>
-        </div>
 
-        <!-- Aside -->
-        <aside>
-            <h1>Lumi Novry M</h1>
-        </aside>
     </main>
     <!-- Footer -->
     <footer>
 
     </footer>
 
-    <script src="./script/script.js"></script>
+    <script src="./script/script.js">
+
+    </script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
