feat: create responsive navbar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                         </div>
                     </li>
                 </ul>
+                <span>
+                    <ion-icon name="search-outline"></ion-icon>
+                </span>
             </div>
             <div class="second-header">
                 <ul>
