--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
     </header>
     <!-- Main -->
     <main>
-
+        <div id="content">
+            <h1>Content</h1>
+        </div>
+        <aside>
+            <h1>Author</h1>
+            <img src="" alt="Lumi Novry M">
+        </aside>
     </main>
     <!-- Footer -->
     <footer>
