--- a/index.html
+++ b/index.html
@@ -74,8 +74,23 @@
             <h1>Content</h1>
         </div>
         <aside>
-            <h1>Author</h1>
-            <img src="" alt="Lumi Novry M">
+            <div class="background">
+                <div class="black"></div>
+            </div>
+            <div class="content">
+                <h1>About Author</h1>
+                <img src="assets/Profile Photo.jpg" alt="Lumi Novry M">
+                <p class="name">Lumi Novry M</p>
+                <p class="title">Full Stack Engineer at Monster Data Asia</p>
+                <p class="bio">&quot;Everyone keeps telling me how my story is supposed to go. Nah. I'm-a do my own
+                    thing&quot;</p>
+                <ul class="icon">
+                    <li><ion-icon name="logo-youtube"></ion-icon></li>
+                    <li><ion-icon name="logo-linkedin"></ion-icon></li>
+                    <li><ion-icon name="logo-instagram"></ion-icon></li>
+                    <li><ion-icon name="logo-facebook"></ion-icon></li>
+                </ul>
+            </div>
         </aside>
     </main>
     <!-- Footer -->
