feat: create responsive aside 'author profile'

--- a/index.html
+++ b/index.html
@@ -71,7 +71,20 @@
     <!-- Main -->
     <main>
         <div id="content">
-            <h1>Content</h1>
+            <article class="first-news">
+                <img src="assets/How to become cameramen.jpg" alt="Cameramen">
+                <h1>How To Become A Professional Cameraman</h1>
+                <h5>Relevant courses include degrees in media production, media technology or photography. It may give
+                    you an advantage if you can find a course that offers practical and work experience opportunities
+                    like shadowing, internships or a year placement.</h5>
+                <div>
+                    <span class="material-symbols-outlined">
+                        calendar_month
+                    </span>
+                    &nbsp;
+                    25 December 2024
+                </div>
+            </article>
         </div>
         <aside>
             <div class="background">
